# fite-stream

./: REWRITE.md
workspace/fitstream/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
workspace/fitstream/.github/: dependabot.yml
workspace/fitstream/.github/workflows/: ci.yml  release.yml
workspace/fitstream/config/: default.yaml
workspace/fitstream/data/users/: users.json
workspace/fitstream/docs/: api_reference.md  architecture.md  audit_final_2026-06-07.md  audit_independant_2026-06-07.md  code_audit.md  deployment.md  models.md  pipelines.md
workspace/fitstream/fitstream/: __init__.py  cli.py  config.py  sdk.py
workspace/fitstream/fitstream/api/: __init__.py  app_factory.py  dependencies.py  error_handlers.py  middleware.py  mobile.py  schemas.py  server.py  tracing.py  websocket.py
workspace/fitstream/fitstream/core/: __init__.py  ab_testing.py  analytics.py  cache.py  ecommerce.py  errors.py  export.py  gallery.py  i18n.py  interfaces.py  job_queue.py  lora_trainer.py  plugins.py  postprocessing.py  preprocessing.py  prompt_templates.py  (+3 more)
workspace/fitstream/frontend/: Dockerfile  create.html  gallery.html  index.html  monitor.html  next.config.js  package.json  tailwind.config.ts
workspace/fitstream/frontend-next/: README.md  next.config.js  package.json
workspace/fitstream/mobile/: README.md  app.json  package.json
workspace/fitstream/scripts/: demo.py  download_models.py  fix_docstrings.py  setup.sh
workspace/fitstream/streamlit/: README.md  app.py
workspace/fitstream/tests/: __init__.py  conftest.py  test_ab_testing.py  test_analytics.py  test_api.py  test_cache.py  test_cache_extended.py  test_cli.py  test_config.py  test_config_extended.py  test_ecommerce.py  test_errors.py  test_errors_hierarchy.py  test_export.py  test_export_extended.py  test_gallery.py  test_gallery_extended.py  test_i18n.py  test_image_validation.py  test_interfaces.py  test_interfaces_extended.py  test_job_queue.py  test_job_queue_extended.py  test_loom.py  test_loom_native.py  test_lora_trainer.py  test_middleware.py  test_model_manager.py  test_pipeline_conformity.py  test_plugins.py  test_plugins_extended.py  test_postprocessing.py  test_preprocessing.py  test_preprocessing_extended.py  test_prompt_templates.py  test_prompt_utils.py  test_property_based.py  test_rate_limiter_extended.py  test_realtime.py  test_scheduler.py  (+12 more)
(+42 files in other folders)
