[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitstream"
version = "0.1.0"
description = "Animation Storytelling & Virtual Try-On Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1.2",
    "torchvision>=0.16.2",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "huggingface-hub>=0.20.0",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]
streamlit = [
    "streamlit>=1.38.0",
    "requests>=2.31.0",
]

[project.scripts]
fitstream = "fitstream.cli:main"

[tool.setuptools.packages.find]
include = ["fitstream*"]

# ============================================================
# Linting & Formatting
# ============================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["fitstream", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict
    "SIM108", # ternary operator
    "B904",  # raise from
    "SIM102", # nested if
    "SIM105", # suppress
    "SIM117", # with statements
    "F841",  # unused variable
    "SIM115", # open without context
]

[tool.ruff.lint.isort]
known-first-party = ["fitstream"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = false
warn_no_return = false
disable_error_code = ["truthy-function"]
